게시글, 알람, 댓글 프론트 연결 작업 완료